Fix usernames visible with real names
Fix z-index of popup

ERM33172

[4.3.x]

--- a/resources/bluespice.whoIsOnline.less
+++ b/resources/bluespice.whoIsOnline.less
@@ -21,6 +21,11 @@
 	opacity: 1;
 }
 
+// overlay can be behind sidebars
+.wo-link > div.oo-ui-popupWidget {
+	z-index: 1050;
+}
+
 .wo-link .oojsplus-user-widget {
 	display: block;
 	padding: 5px 0;
